# libhark

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix
.github/workflows/: docs.yaml
cmake/: CompilerWarnings.cmake  Hardening.cmake  Sanitizers.cmake
examples/: CMakeLists.txt  echo_server.c  reconnect_demo.c
include/hark/: connector.h  export.h  hark.h  reactor.h  signal.h  timer.h  types.h  version.h.in
src/: CMakeLists.txt  connector.c  error.c  internal.h  reactor.c  signal.c  timer.c
